Move configuration from constants to user settings.
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-sdk android:minSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="19"
+              android:targetSdkVersion="19"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         android:icon="@drawable/icon"
@@ -22,7 +22,19 @@
             <intent-filter>
                 <action android:name="org.microg.nlp.LOCATION_BACKEND" />
             </intent-filter>
+            <meta-data
+                android:name="org.microg.nlp.BACKEND_SETTINGS_ACTIVITY"
+                android:value="org.fitchfamily.android.wifi_backend.settings" />
         </service>
+
+        <activity android:name="org.fitchfamily.android.wifi_backend.settings"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait"
+                  >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
         <service android:name=".WiFiSamplerService" />
     </application>
