--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.fitchfamily.android.wifi_backend"
-      android:versionCode="18"
-      android:versionName="0.14.0">
+      android:versionCode="19"
+      android:versionName="0.14.1">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -17,7 +17,7 @@
 
         <service
             android:name=".BackendService"
-            android:label="Personal WiFi Backend"
+            android:label="@string/app_name"
             android:permission="android.permission.ACCESS_COARSE_LOCATION">
             <intent-filter>
                 <action android:name="org.microg.nlp.LOCATION_BACKEND" />
@@ -25,6 +25,9 @@
             <meta-data
                 android:name="org.microg.nlp.BACKEND_SETTINGS_ACTIVITY"
                 android:value="org.fitchfamily.android.wifi_backend.settings" />
+            <meta-data
+                android:name="org.microg.nlp.BACKEND_SUMMARY"
+                android:value="@string/summary" />
         </service>
 
         <activity android:name="org.fitchfamily.android.wifi_backend.settings"
