First cut at converting to using Gradle and AndroidStudio
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-bin/
-gen/
 tags
 .DS_Store
 local.properties
-ant.properties
+gen/
+.idea/
+out/
+*.iml
+build/
+*.apk
+.gradle/
+user.gradle
+local.properties
