--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,15 @@
-apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 18
-    buildToolsVersion "22.0.1"
-
-    defaultConfig {
-        applicationId "org.fitchfamily.android.wifi_backend"
-        minSdkVersion 17
-        targetSdkVersion 18
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        jcenter()
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.2.3'
     }
 }
 
-dependencies {
-    compile 'org.microg:unifiednlp-api:1.3.2'
-    compile 'com.android.support:support-v4:22.0.0'
+allprojects {
+    repositories {
+        jcenter()
+    }
 }
