--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,7 @@
     <uses-sdk android:minSdkVersion="17"
               android:targetSdkVersion="18"/>
 
-    <application android:label="@string/app_name" android:icon="@drawable/icon">
-        android:icon="@drawable/icon"
-        android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@mipmap/ic_launcher">
 
         <service
             android:name=".BackendService"
