--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        // replace with the current version of the Android plugin
+        classpath 'com.android.tools.build:gradle:1.5.0'
+        // replace with the current version of the android-apt plugin
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 18
@@ -18,7 +32,17 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots/"
+    }
+}
+
 dependencies {
     compile 'org.microg:unifiednlp-api:1.3.2'
     compile 'com.android.support:support-v4:22.0.0'
+    provided 'com.google.auto.value:auto-value:1.2-SNAPSHOT'
+    compile 'com.google.guava:guava:19.0'
 }
