--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,19 @@ repositories {
     }
 }
 
+def AAVersion = '3.3.2'
+
 dependencies {
     compile 'org.microg:unifiednlp-api:1.3.2'
     compile 'com.android.support:support-v4:22.0.0'
     provided 'com.google.auto.value:auto-value:1.2-SNAPSHOT'
     compile 'com.google.guava:guava:19.0'
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
+}
+
+apt {
+    arguments {
+        androidManifestFile variant.outputs[0]?.processResources?.manifestFile
+    }
 }
