--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,13 @@ dependencies {
     compile 'com.google.guava:guava:19.0'
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
+    compile('com.mikepenz:materialdrawer:4.6.3@aar') {
+        transitive = true
+    }
+    compile 'com.mikepenz:google-material-typeface:2.1.0.1.original@aar'
+    compile('com.mikepenz:aboutlibraries:5.3.7@aar') {
+        transitive = true
+    }
 }
 
 apt {
