--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,13 +15,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 18
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "org.fitchfamily.android.wifi_backend"
         minSdkVersion 17
-        targetSdkVersion 18
+        targetSdkVersion 23
     }
 
     buildTypes {
@@ -41,10 +41,11 @@ repositories {
 }
 
 def AAVersion = '3.3.2'
+def ASVersion = '23.0.0'
 
 dependencies {
     compile 'org.microg:unifiednlp-api:1.3.2'
-    compile 'com.android.support:support-v4:22.0.0'
+    compile "com.android.support:support-v4:$ASVersion"
     provided 'com.google.auto.value:auto-value:1.2-SNAPSHOT'
     compile 'com.google.guava:guava:19.0'
     apt "org.androidannotations:androidannotations:$AAVersion"
