Fix manifest for renamed GPS monitor (was sampling service)
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".sampler.WifiSamplerService_" />
+        <service android:name=".backend.gpsMonitor_" />
 
         <activity
             android:name=".ui.data.WifiListActivity_"
