--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,7 +67,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
-    compile files('libs/opencsv-3.7.jar')
+    compile 'com.opencsv:opencsv:3.7'
 }
 
 apt {
