--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "org.fitchfamily.android.wifi_backend"
@@ -38,11 +38,10 @@ android {
 }
 
 def AAVersion = '3.3.2'
-def ASVersion = '23.0.0'
 
 dependencies {
-    compile "com.android.support:support-v4:$ASVersion"
-    provided 'com.google.auto.value:auto-value:1.2-rc1'
+    compile "com.android.support:support-v4:23.4.0"
+    provided 'com.google.auto.value:auto-value:1.5.2'
     apt "org.androidannotations:androidannotations:$AAVersion"
     compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile('com.mikepenz:materialdrawer:4.6.3@aar') {
@@ -51,12 +50,12 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.3.7@aar') {
         transitive = true
     }
-    compile 'org.microg:unifiednlp-api:1.5.0'
+    compile 'org.microg:unifiednlp-api:1.5.3'
     compile 'com.google.guava:guava:19.0'
     compile 'com.mikepenz:google-material-typeface:2.1.0.1.original@aar'
-    compile "com.android.support:support-v4:$ASVersion"
-    compile "com.android.support:recyclerview-v7:$ASVersion"
-    compile 'com.google.code.gson:gson:2.5'
+    compile "com.android.support:support-v4:23.4.0"
+    compile "com.android.support:recyclerview-v7:23.4.0"
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.octo.android.robospice:robospice:1.4.14'
     compile 'com.github.machinarius:preferencefragment:0.1.1'
     compile 'com.opencsv:opencsv:3.7'
